[package]
name = "bevy_prototype"
version = "0.1.0"
authors = ["barba"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3.0"
bevy_tilemap = "0.1.1"
bevy_rapier2d = "0.5.0"
lazy_static = "1.4.0"
rand = "0.7.3"
strum = "0.20"
strum_macros = "0.20"