[package]
name = "bevy_prototype"
version = "0.1.0"
authors = ["barba"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4.0"
# bevy_tilemap = "0.3.0"
bevy_rapier2d = "0.7.0"
lazy_static = "1.4.0"
rand = "0.7.3"
strum = "0.20"
strum_macros = "0.20"
enum-map = "0.6.4"
serde = "1.0.118"
serde_json = "1.0.60"